Fixed z-index of scroll down icon

--- a/portfolio-website/src/app/home/home.component.scss
+++ b/portfolio-website/src/app/home/home.component.scss
@@ -96,7 +96,7 @@
     position: absolute;
     bottom: 80px;
     left: 50%;
-    z-index: 2;
+    z-index: 150;
     display: inline-block;
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
